KLEE file results in table

--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -207,7 +207,7 @@ $Tool$   &                     \multicolumn{6}{|c}{$Bug Type$}                  
          &    1       & $2^7$       & $2^{14}$     & $2^{21}$   & $2^{28}$     & $KT$   \\  \hline 
 $Fuzzer$ &    0       & 0           & 0            & 7\%        & 58\%         & 0         \\
 %$CSA_1$ &    0       & 0           & 0            & 0          & 0            & 0         \\
-$SES$    &    0       & 0           & 0            & 0          & 0            & 0         \\
+$SES$    &    8\%     & 0           & 9\%          & 21\%       & 0            & 10\%         \\
 \end{tabular}
 \caption{Percentage of bugs found in \emph{LAVA-1} corpus. % as a function of $Bug Type$ and $Tool Type$.  
 The most effective vulnerability finding tool proved to be FUZZER.  
