--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -217,7 +217,7 @@ However, it was only able to find bugs that allowed an enormous range of possibl
 
 The results of this evaluation are summarized in Table~\ref{table:eval1-file}.
 Five different ranges were employed: $2^0, 2^7, 2^{16}, 2^{21}, 2^{28}$. 
-We examined all output from both tools.  
+We examined all output from both tools.
 FUZZER ran for one hour on each bug and found 7\% of those with a range of $2^{21}$ and 58\% of those with a range size of $2^{28}$.
 SES ran for five hours on each bug, and found \todo{KLEE results}.
 
@@ -247,16 +247,30 @@ Finally, there is a copy of \verb+coreutils+ with 2136 bugs existing all at once
 \centering
 \begin{tabular}{l|c|c|c|c|c} 
 \multirow{2}{*}{Tool Name} & \multirow{2}{*}{Total Bugs} & \multicolumn{4}{c}{Unique Bugs Found} \\
-              &            & $Fuzzer$    & $CSA_1$      & $SES$      & $Combined$ \\ \hline 
-\verb+uniq+   &    28      & 7           & 0            & 0          & 0               \\
-\verb+base64+ &    44      & 7           & 0            & 0          & 0               \\
-\verb+md5sum+ &    57      & 2           & 0            & 0          & 0               \\
-\verb+who+    &    2136    & 0           & 0            & 0          & 0               \\
-Total         &    0       & 16          & 0            & 0          & 0               \\
+              &            & FUZZER       & SES     & Combined \\ \hline 
+\verb+uniq+   &    28      & 7                 & 0          & 0               \\
+\verb+base64+ &    44      & 7              & 9          & 0               \\
+\verb+md5sum+ &    57      & 2             & 0          & 0               \\
+\verb+who+    &    2136    & 0              & 18          & 0               \\
+Total         &    0       & 16                 & 27          & 0               \\
 \end{tabular}
-\caption{Bugs found in selected GNU coreutils programs by each tool type.}
+\caption{Bugs found in \emph{LAVA-M} corpus by each tool type.}
 \label{table:tool-eval-results-coreutils}
 \end{table}
+
+We ran FUZZER and SES against each program in \emph{LAVA-M}, with 5 hours of runtime for each program on machines with essentially unlimited RAM.
+\verb+md5sum+ ran with the \verb+-c+ argument, as if it were checking digests in a symbolic file.
+\verb+base64+ ran with the \verb+-d+ argument, to decode base 64.
+SES found no bugs in \verb+uniq+ or \verb+md5sum+.
+In \verb+uniq+, we believe this is because the control flow is too unconstrained.
+In \verb+md5sum+, SES failed to execute any code past the first instance of the hash function.
+\verb+base64+ and \verb+who+ both turn out more successful for SES.
+The tool finds 9 bugs in \verb+base64+ out of 44 inserted; these include both deep and shallow bugs, as base64 is such a simple program to analyze.
+SES' results are a little more complicated for \verb+who+.
+All of the bugs it finds for \verb+who+ use one of two DUAs, and all of them occur very early in the trace.
+One artifiact of our method for injecting multiple bugs simultaneously is that multiple bugs share the same attack point.
+It is debatable how realistically this aspect represents real bugs.
+In practice, it means that SES can only find one bug per attack point, as finding an additional bug at the same ATP does not necessarily require covering new code.
 
 To do: fix up Table~\ref{table:tool-eval-results-coreutils} and write paragraph(s) describing results for \emph{LAVA-M} corpus.
 
