a few fixups here and there

--- a/paper1/motivation.tex
+++ b/paper1/motivation.tex
@@ -16,6 +16,7 @@ In practice, a vulnerability discovery tool is typically evaluated by running it
 Thus, one technique is judged superior if it finds more bugs than another.
 While this state of affairs is perfectly understandable, given the scarcity of ground truth, it is an obstacle to science and progress in vulnerability discovery.
 There is currently no way to measure fundamental figures of merit such as miss and false alarm rate for a bug finding tool.
+\todo{How will LAVA allow us to measure FA rate?  If so, how?} 
 
 We propose the following requirements for bugs in a vulnerability corpus, if it is to be useful for research, development, and evaluation.
 Bugs must
