--- a/paper1/implementation.tex
+++ b/paper1/implementation.tex
@@ -25,7 +25,7 @@ These stages are also depicted in Figure~\ref{fig:lava-impl}.
 \subsection{Taint queries}
 LAVA's taint queries rely on the PANDA dynamic analysis platform~\cite{PANDA}, which is based on the QEMU whole-system emulator.
 PANDA augments QEMU in three important ways.
-First, it introduces deterministic record and replay, which can be used for iterated and expensive analyses that cannot be performed online.
+First, it introduces deterministic record and replay, which can be used for iterated and expensive analyses (e.g. taint) that often cannot be performed online.
 Second, it has a simple but powerful plugin architecture that allows for powerful analyses to be built and even built upon one another.
 Third, it integrates, from S2E~\cite{S2E}, the ability to lift QEMU's intermediate language to LLVM for analysis.
 
@@ -33,7 +33,7 @@ The main feature of PANDA used by LAVA is a fast and robust dynamic taint analys
 basic block of emulated code.
 This LLVM version includes emulated versions of every x86 instruction that QEMU supports.
 QEMU often implements tricky processor instructions (e.g. MMX and XMM on x86) in C code.
-These are compiled to LLVM bitcode using Clang, and, thereby made available for taint analysis by PANDA.
+These are compiled to LLVM bitcode using Clang, and, thereby made available for taint analysis by PANDA as well.
 This process ensures that PANDA's taint analysis is \emph{complete} in the sense that it can track dataflow through all instructions.
 
 LAVA employs a simple PANDA plugin named \verb+file_taint+ that is able to apply taint labels to bytes read from files in Linux.
@@ -44,6 +44,9 @@ Before running a target program under PANDA, LAVA first invokes a custom Clang t
 Each function argument is deconstructed into its constituent lvalues, and Clang adds a taint query for each as a \emph{hypervisor call} which notifies PANDA to query the taint system about a specific source-level variable.
 The function return value also gets a taint query hypercall.
 LAVA also uses Clang to insert source hypervisor calls at potential attack points.
+It should be noted that the query points employed by LAVA are by no means exhaustive.
+There is every reason to expect that quering at pointer dereferences, e.g., might yield a number of additional DUAs.
+
 
 \subsection{Running the program}
 Once the target has been instrumented with taint queries, we run it against a variety of inputs.
@@ -85,6 +88,8 @@ Finally, when \verb+FIB+ encounters an attack point in the pandalog, the functio
 and those that are still viable with respect to liveness are paired with the attack point as a potentially injectable bugs.
 In the current implementation of LAVA, an attack point is an argument to a function call that can be \emph{made vulnerable by adding a DUA to it}.
 This means the argument can be a pointer or some kind of integer type; the hope is that changing this value by a large amount may trigger a buffer overflow.
+Note that, as with taint queries, LAVA attack point selection is clearly far from complete.
+We might imagine attacking pointer reads and writes, their uses in conditionals, etc.  
 
 \begin{figure}
 \lstinputlisting[language=C,numbers=left, numberstyle=\tiny, stepnumber=2, numbersep=5pt,
@@ -106,7 +111,7 @@ The function \texttt{lava\_get} retrieves the value last stored by a call to  \t
 \subsection{Inject and Test Bugs}
 For each DUA/attack point pair, we generate the C code which uses the DUA to trigger the bug using another custom Clang tool.
 At the source line and for the variable in the DUA, we inject code to copy its value into a static variable held by a helper function.
-At the attack point, an argument to a function call, we insert code that retrieves the DUA value, determines if it matches a magic value, and if so adds it to one of the argument.
+At the attack point, we insert code that retrieves the DUA value, determines if it matches a magic value, and if so adds it to one of the function arguments.
 
 The final step in LAVA is simply compiling and testing the modified program on a proof-of-concept input file, in which the input file bytes indicated as tainting the DUA have been set to the correct value.
 An example of the pair of source code insertions plus the file modifiction in order to inject a bug into the program \verb+file+ can be seen in Figures~\ref{src:dua-siphon}, and~\ref{src:dua-use}.
