Fix biblio mistakes

--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -18,32 +18,21 @@
 	Year = {2005}}
 
 @inproceedings{Shiraishi:2014,
-	Acmid = {2706360},
-	Address = {Washington, DC, USA},
 	Author = {Shiraishi, Shin'ichi and Mohan, Veena and Marimuthu, Hemalatha},
-	Booktitle = {Proceedings of the 2014 IEEE International Symposium on Software Reliability Engineering Workshops},
-	Date-Added = {2015-11-05 16:40:56 +0000},
-	Date-Modified = {2015-11-05 16:40:59 +0000},
-	Doi = {10.1109/ISSREW.2014.62},
-	Isbn = {978-1-4799-7377-4},
+	Booktitle = {Proceedings of the 2015 IEEE International Symposium on Software Reliability Engineering},
 	Keywords = {static analysis, software assurance, automotive software},
-	Numpages = {4},
-	Pages = {96--99},
-	Publisher = {IEEE Computer Society},
-	Series = {ISSREW '14},
-	Title = {Quantitative Evaluation of Static Analysis Tools},
-	Url = {http://dx.doi.org/10.1109/ISSREW.2014.62},
-	Year = {2014},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1109/ISSREW.2014.62}}
+	Series = {ISSRE '15},
+	Title = {Test Suites for Benchmarks of Static Analysis Tools},
+	Year = {2015}}
 
-@url{Keromytis:2015,
+@misc{Keromytis:2015,
 	Author = {Keromytis et al.},
 	Date-Added = {2015-10-09 19:33:48 +0000},
 	Date-Modified = {2015-10-09 19:35:25 +0000},
 	Lastchecked = {October 9, 2015},
 	Month = {August},
 	Title = {Tunable Cyber Defensive Security Mechanisms},
-	Url = {https://www.sbir.gov/sbirsearch/detail/825791},
+	Howpublished = {\url{https://www.sbir.gov/sbirsearch/detail/825791}},
 	Year = {2015},
 	Bdsk-Url-1 = {https://www.sbir.gov/sbirsearch/detail/825791}}
 
@@ -185,10 +174,10 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1029894.1029911},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1029894.1029911}}
 
-@webpage{Tsyrklevich:2015,
+@misc{Tsyrklevich:2015,
 	Author = {Vlad Tsyrklevich},
 	Date-Modified = {2015-10-08 17:53:55 +0000},
-	Howpublished = {Blog post},
+	Howpublished = {\url{https://tsyrklevich.net/2015/07/22/hacking-team-0day-market/}},
 	Lastchecked = {8 October 2015},
 	Month = {July},
 	Title = {Hacking Team: A Zero-Day Market Case Study},
@@ -199,7 +188,7 @@
 @inproceedings{Kratkiewicz:2005,
 	Author = {Kratkiewicz, Kendra and Lippmann, Richard},
 	Booktitle = {Proc. of Workshop on the Evaluation of Software Defect Detection Tools},
-	Title = {Using a diagnostic corpus of C programs to evaluate buffer overflow detection by static analysis tools},
+	Title = {Using a diagnostic corpus of {C} programs to evaluate buffer overflow detection by static analysis tools},
 	Year = {2005}}
 
 @inproceedings{Ganesh:2009,
