rewrote a bunch of limitations and future work and added one citation

--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -242,3 +242,10 @@
 	Booktitle = {IEEE Symposium on Security and Privacy},
 	Title = {Unleashing Mayhem on Binary Code},
 	Year = {2012}}
+
+@inproceedings{ruwase2004practical,
+  title={A Practical Dynamic Buffer Overflow Detector.},
+  author={Ruwase, Olatunji and Lam, Monica S},
+  booktitle={NDSS},
+  year={2004}
+}
