--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -1,6 +1,6 @@
 \documentclass[conference]{IEEEtran} 
 \IEEEoverridecommandlockouts
-\usepackage{epsfig,graphicx,subcaption}
+\usepackage{epsfig,graphicx}
 % \usepackage[hyphens]{url}
 \usepackage{hyperref}
 \usepackage{amsmath}
