squashed a couple more todos

--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -99,7 +99,7 @@ We are unsure why so few of the source files in \verb+readelf+ involve a potenti
 
 \subsection{Bug Realism}
 
-\todo[inline]{Ricky: I think it would be particularly convincing to have a "case study" of an actual CVE that exhibits data flow properties similar to the kind of bug LAVA injects.  Or maybe a bug that adds unchecked tainted data to a pointer.} 
+%\todo[inline]{Ricky: I think it would be particularly convincing to have a "case study" of an actual CVE that exhibits data flow properties similar to the kind of bug LAVA injects.  Or maybe a bug that adds unchecked tainted data to a pointer.} 
 
 \begin{figure}
 \centering
