--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -7,7 +7,10 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
+@misc{ActuallyTim,
+	Author = {Zitser, Misha and Lippmann, Richard and Leek, Tim},
+    Howpublished = {Personal communication}
+}
 
 @inproceedings{newsometaint,
 	Author = {James Newsome and Dawn Song},
