--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -8,7 +8,7 @@
 
 %\documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{times}
+%\usepackage{times}
 %\usepackage{algorithm}
 \usepackage{listings}
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
