--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -44,13 +44,13 @@ Wil Robertson\IEEEauthorrefmark{3}, Frederick Ulrich\IEEEauthorrefmark{2}, Ryan 
 \begin{abstract}
 
 Work on automating vulnerability discovery has long been hampered by a shortage of ground-truth corpora with which to evaluate tools and techniques.
-To begin to address this, we present LAVA, a dynamic taint analysis-based system for automatically and quickly injecting large numbers of realistic bugs into program source code.  
-Every LAVA vulnerability is accompanied by an input that triggers it, and guarantees that normal inputs are extremely unlikely to do so.
-Further, every injected bug is validated, and thus every working bug comes with both a proof-of-concept input and a known manifestation point.
+This lack of ground truth prevents authors and users of such tools from answering fundamental questions such as what the false positive and negative rates for a given tool are.
+In this paper, we present LAVA, a novel dynamic taint analysis-based technique for producing ground-truth corpora by quickly and automatically injecting large numbers of realistic bugs into program source code.
+Every LAVA bug is accompanied by an input that triggers it and a guarantee that normal inputs are extremely unlikely to do so.
 These vulnerabilities are synthetic but, we argue, still realistic, in the sense that they are embedded deep within programs and are triggered by real inputs.
-Using LAVA, we have injected thousands of bugs into real-world programs such as file, readelf, bash, tshark, base64, md5sum, uniq, and who.
-In a preliminary evaluation, we found that a prominent fuzzer and a tool that uses symbolic execution and constraint solving to find bugs were able to find some but not all LAVA-injected bugs, and that interesting pattern and pathologies were already apparent.
-Our work forms the basis of an approach for generating extremely high quality ground truth vulnerability corpora on demand that enables rigorous tool evaluation and gives tool vendors a high-quality target to aim for.
+Using LAVA, we have injected thousands of bugs into eight real-world programs, including bash, tshark, and the GNU coreutils.
+In a preliminary evaluation, we found that a prominent fuzzer and a symbolic execution-based bug finder were able to locate some but not all LAVA-injected bugs, and that interesting patterns and pathologies were already apparent in their performance.
+Our work forms the basis of an approach for generating large ground-truth vulnerability corpora on demand, enabling rigorous tool evaluation and giving tool vendors a high-quality target to aim for.
 
 \end{abstract}
 
