--- a/paper1/scope.tex
+++ b/paper1/scope.tex
@@ -12,3 +12,6 @@ As we detail later, a similar approach will work for other languages.
 We want the injected bugs to be serious ones, i.e., potentially exploitable.
 As a convenient proxy, our current focus is on injecting code that can result in out-of-bounds reads and writes that can be triggered by an attacker-controlled input; in Section~\ref{sec:future} we consider extensions to LAVA to support other bug classes.
 We produce a proof-of-concept input to trigger any bug we successfully inject, although we do not attempt to produce an actual exploit.
+
+For the sake of brevity, in this paper we will use the words \emph{bug} and \emph{vulnerability} interchangeably.
+In both cases, what we mean is vulnerabilities (in particular, primarily out-of-bounds reads and writes) that cause potentially exploitable crashes.
