--- a/paper1/future.tex
+++ b/paper1/future.tex
@@ -27,7 +27,8 @@ Since our approach records the correspondence between source lines and program b
 We have no immediate plans to extend LAVA in these directions.
 
 We are planning some additional evaluation work.
-In particular, an extensive evaluation of real, named tools should be undertaken and the results examined with care and used to diagnose the the strengths and weaknesses of both implementations and also classes of techniques.
+In particular, an extensive evaluation of real, named tools should be undertaken.
+Taken with care, the results will shed light on the the strengths and weaknesses of classes of techniques, as well as particular implementations of each type of tool.
 It should also be noted that, in our preliminary evaluation of vulnerability discovery tools, we measured only the \emph{miss rate}; no attempt was made to gauge the \emph{false alarm rate}.
 For tools that generate a triggering input, as do both SES and FUZZER, measuring false alarm rate should be trivial. 
 Every input can be tested against the program after it has been instrumented to be able to detect the vulnerability.
