--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -50,7 +50,7 @@ Every LAVA bug is accompanied by an input that triggers it and a guarantee that 
 These vulnerabilities are synthetic but, we argue, still realistic, in the sense that they are embedded deep within programs and are triggered by real inputs.
 Using LAVA, we have injected thousands of bugs into eight real-world programs, including bash, tshark, and the GNU coreutils.
 In a preliminary evaluation, we found that a prominent fuzzer and a symbolic execution-based bug finder were able to locate some but not all LAVA-injected bugs, and that interesting patterns and pathologies were already apparent in their performance.
-Our work forms the basis of an approach for generating large ground-truth vulnerability corpora on demand, enabling rigorous tool evaluation and giving tool vendors a high-quality target to aim for.
+Our work forms the basis of an approach for generating large ground-truth vulnerability corpora on demand, enabling rigorous tool evaluation and providing a high-quality target for tool developers.
 
 \end{abstract}
 
