removing todo stuff

--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -93,5 +93,5 @@ Our work forms the basis of an approach for generating large ground-truth vulner
 \bibliographystyle{plain}
 \bibliography{biblio}
 
-\listoftodos
+%\listoftodos
 \end{document}
